[tool.poetry]
name = "mixs"
version = "6.3.0"
description = "MIxS: the Minimum Information about any (X) Sequence standard"
authors = [
    "Mark Andrew Miller <MAM@lbl.gov>",
    "Sujay Patil <spatil@lbl.gov>"
]
license = "CC0-1.0 license"
readme = "README.md"
include = ["README.md", "project", "src/mixs", "src/scripts"]

#[tool.poetry-dynamic-versioning]
#enable = true
#vcs = "git"
#style = "pep440"

[tool.poetry.dependencies]
python = "^3.10"
# TEMPORARY: build OWL against a linkml feature branch that declares the
# metamodel grouping classes (e.g. linkml:EnumDefinition) that EBI OLS needs to
# group enum instances/subclasses. Pinned to a fixed commit (rev) rather than the
# moving branch owl-declare-grouping-classes so the generated OWL is reproducible.
# Note this is a git-based runtime dependency, so installing MIxS requires git and
# network access to GitHub, not just PyPI. Revert to a linkml release once the
# branch is merged and released; tracked in
# https://github.com/GenomicsStandardsConsortium/mixs/issues/1237
linkml-runtime = {git = "https://github.com/turbomam/linkml.git", rev = "3de07ab16b12b6edf5734de973465c2e5b715e03", subdirectory = "packages/linkml_runtime"}
jsonasobj2 = "^1.0" # used transitively in src/scripts/mixs/datamodel/mixs.py

[tool.poetry.group.dev.dependencies]
black = "^26.3"
deptry = "^0.23"
# TEMPORARY: see the linkml-runtime note above (same commit, pinned by rev).
linkml = {git = "https://github.com/turbomam/linkml.git", rev = "3de07ab16b12b6edf5734de973465c2e5b715e03", subdirectory = "packages/linkml"}
matplotlib = "^3.10"
mkdocs-material = "^9.6"
mkdocs-mermaid2-plugin = "^1.2"
pandas = "^2.3"
pyarrow = ">=21,<24"
rdflib = "^7.1"
schemasheets = "^0.4"
scipy = "^1.15"
yamllint = "^1.37"
click = "^8.1"
pyyaml = "^6.0"
requests = "^2.33"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
extension-distances = 'scripts.extension_distances:generate_dendrogram'
extension-differences = 'scripts.extension_slot_differences:set_arithmetic'
linkml2class-tsvs = 'scripts.linkml2class_tsvs:process_schema_classes'
generate-combinations = 'scripts.combinations_list_generator:generate_combinations'
generate-enumerations = 'scripts.enumerations_list_generator:generate_enumerations'
generate-term-list = 'scripts.term_list_generator:generate_term_list'
organize-files = 'scripts.organize_files:main'
required-supersedes-recommended = 'scripts.required_supersedes_recommended:find_required_and_recommended_usages'
describe-enums = 'scripts.describe_enums_by_slots_using:update_enum_descriptions'
isolate-global-slots = 'scripts.isolate_slots:isolate_global_slots'
diff-releases = 'scripts.diff_two_linkml_mixs_releases:main'

[tool.deptry.package_module_name_map]
pyyaml = "yaml"
python-dotenv = "dotenv"
